--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -142,17 +142,17 @@
                     Teaching Assistant in Computer Science (2024)</a></li>
                 <li><a href="https://engineering.ucsb.edu/news/class-2023-selects-teaching-assistants-year">Outstanding
                     Teaching Assistant in Computer Science (2023)</a></li>
-                </li>
               </ul>
 
-              <h3>Certificates ✅</h3>
+              <h3>Certificates and Training ✅</h3>
               <ul>
                 <li>(In progress) <a
                     href="https://otl.ucsb.edu/graduate-students/ta-certificate-programs/ccut">Certificate in College
                     and University Teaching (CCUT)</a></li>
                 <li>(In progress) <a href="https://otl.ucsb.edu/graduate-students/ta-certificate-programs/stia">Summer
                     Teaching Institute for Associates (STIA)</a></li>
-                </li>
+                <li>(In progress) <a href="https://www.coursicle.com/ucsb/courses/GRAD/210/">GRAD 210 - College and
+                    University Teaching: From Theory to Practice</a></li>
               </ul>
 
               <h3>Instructor 🧑‍🏫</h3>
@@ -165,7 +165,7 @@
                 </div>
                 <div class="col-10-12">
                   <div class="content">
-                    CS 162: Programming Languages <a href="https://junrui-liu.github.io/cs162">🚧</a>
+                    CS 162 - Programming Languages <a href="https://junrui-liu.github.io/cs162">🚧</a>
                   </div>
                 </div>
                 <div class="col-2-12">
@@ -175,7 +175,7 @@
                 </div>
                 <div class="col-10-12">
                   <div class="content">
-                    <a href="https://github.com/fredfeng/CS292C/tree/spring-2024">CS 292C: Computer-Aided Reasoning for
+                    <a href="https://github.com/fredfeng/CS292C/tree/spring-2024">CS 292C - Computer-Aided Reasoning for
                       Software</a> (co-taught with Yu Feng)
                   </div>
                 </div>
@@ -195,7 +195,7 @@
                 </div>
                 <div class="col-10-12">
                   <div class="content">
-                    <a href="https://ucsb.instructure.com/courses/26675">CS 160: Compilers</a>
+                    <a href="https://ucsb.instructure.com/courses/26675">CS 160 - Compilers</a>
                   </div>
                 </div>
                 <div class="col-2-12">
@@ -205,7 +205,7 @@
                 </div>
                 <div class="col-10-12">
                   <div class="content">
-                    <a href="https://github.com/fredfeng/CS162">CS 162: Programming Languages</a>
+                    <a href="https://github.com/fredfeng/CS162">CS 162 - Programming Languages</a>
                   </div>
                 </div>
                 <div class="col-2-12">
@@ -215,7 +215,7 @@
                 </div>
                 <div class="col-10-12">
                   <div class="content">
-                    <a href="https://github.com/fredfeng/CS190-blockchain">CS 190J: Blockchain
+                    <a href="https://github.com/fredfeng/CS190-blockchain">CS 190J - Blockchain
                       Technologies and Security</a>
                   </div>
                 </div>
@@ -226,7 +226,7 @@
                 </div>
                 <div class="col-10-12">
                   <div class="content">
-                    <a href="https://github.com/fredfeng/CS162/tree/winter-2024">CS 162: Programming Languages</a>
+                    <a href="https://github.com/fredfeng/CS162/tree/winter-2024">CS 162 - Programming Languages</a>
                   </div>
                 </div>
                 <div class="col-2-12">
@@ -236,7 +236,7 @@
                 </div>
                 <div class="col-10-12">
                   <div class="content">
-                    <a href="https://github.com/fredfeng/CS160">CS 160: Compilers </a>
+                    <a href="https://github.com/fredfeng/CS160">CS 160 - Compilers </a>
                   </div>
                 </div>
                 <div class="col-2-12">
@@ -246,7 +246,7 @@
                 </div>
                 <div class="col-10-12">
                   <div class="content">
-                    <a href="https://github.com/fredfeng/CS162/tree/winter-2023">CS 162: Programming Languages</a>
+                    <a href="https://github.com/fredfeng/CS162/tree/winter-2023">CS 162 - Programming Languages</a>
                   </div>
                 </div>
                 <div class="col-2-12">
@@ -256,7 +256,7 @@
                 </div>
                 <div class="col-10-12">
                   <div class="content">
-                    <a href="https://github.com/fredfeng/CS162/tree/winter-2022">CS 162: Programming Languages</a>
+                    <a href="https://github.com/fredfeng/CS162/tree/winter-2022">CS 162 - Programming Languages</a>
                   </div>
                 </div>
 
@@ -267,7 +267,7 @@
                 </div>
                 <div class="col-10-12">
                   <div class="content">
-                    <a href="https://github.com/fredfeng/CS160/tree/fall-2021">CS 160: Compilers</a>
+                    <a href="https://github.com/fredfeng/CS160/tree/fall-2021">CS 160 - Compilers</a>
                   </div>
                 </div>
 
@@ -278,7 +278,7 @@
                 </div>
                 <div class="col-10-12">
                   <div class="content">
-                    <a href="https://catalogue.vassar.edu/preview_course.php?catoid=13&coid=105247">PHIL 125: Logic</a>
+                    <a href="https://catalogue.vassar.edu/preview_course.php?catoid=13&coid=105247">PHIL 125 - Logic</a>
                     (Vassar)
                   </div>
                 </div>
