--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -165,7 +165,7 @@
                 </div>
                 <div class="col-10-12">
                   <div class="content">
-                    <a href="https://junrui-liu.github.io/cs162">🚧 CS 162 - Programming Languages 🚧</a> (pwd: 6-letter
+                    <a href="https://junrui-liu.github.io/cs162">🚧 CS 162 - Programming Languages 🚧</a> (pw: 6-letter
                     name of UCSB's bell tower)
                   </div>
                 </div>
