--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -138,21 +138,22 @@
 
               <h3>Awards 🏆</h3>
               <ul>
-                <li><a href="https://engineering.ucsb.edu/news/class-2024-selects-teaching-assistants-year">Outstanding
-                    Teaching Assistant in Computer Science (2024)</a></li>
-                <li><a href="https://engineering.ucsb.edu/news/class-2023-selects-teaching-assistants-year">Outstanding
-                    Teaching Assistant in Computer Science (2023)</a></li>
+                <li><em>Teaching Assistant of the Year</em>, UCSB Department of Computer Science (2025)</li>
+                <li><em>Outstanding Teaching Assistant in Computer Science</em>, UCSB College of Engineering (2024) <a
+                    href="https://engineering.ucsb.edu/news/class-2024-selects-teaching-assistants-year">[press]</a>
+                </li>
+                <li><em>Outstanding Teaching Assistant in Computer Science</em>, UCSB College of Engineering (2023) <a
+                    href="https://engineering.ucsb.edu/news/class-2023-selects-teaching-assistants-year">[press]</a>
+                </li>
               </ul>
 
               <h3>Certificates and Training ✅</h3>
               <ul>
-                <li>(In progress) <a
+                <li>[In progress] <a
                     href="https://otl.ucsb.edu/graduate-students/ta-certificate-programs/ccut">Certificate in College
                     and University Teaching (CCUT)</a></li>
-                <li>(In progress) <a href="https://otl.ucsb.edu/graduate-students/ta-certificate-programs/stia">Summer
+                <li><a href="https://otl.ucsb.edu/graduate-students/ta-certificate-programs/stia">Summer
                     Teaching Institute for Associates (STIA)</a></li>
-                <li>(In progress) <a href="https://www.coursicle.com/ucsb/courses/GRAD/210/">GRAD 210 - College and
-                    University Teaching: From Theory to Practice</a></li>
               </ul>
 
               <h3>Instructor 🧑‍🏫</h3>
@@ -165,7 +166,8 @@
                 </div>
                 <div class="col-10-12">
                   <div class="content">
-                    <a href="https://junrui-liu.github.io/cs162">🚧 CS 162 - Programming Languages 🚧</a> (pw: 6-letter
+                    <a href="https://sites.cs.ucsb.edu/~junrui/cs162/book/">🚧 CS 162 - Programming Languages 🚧</a>
+                    (pw: 6-letter
                     name of UCSB's bell tower)
                   </div>
                 </div>
