--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -166,9 +166,7 @@
                 </div>
                 <div class="col-10-12">
                   <div class="content">
-                    <a href="https://sites.cs.ucsb.edu/~junrui/cs162/book/">🚧 CS 162 - Programming Languages 🚧</a>
-                    (pw: 6-letter
-                    name of UCSB's bell tower)
+                    <a href="https://sites.cs.ucsb.edu/~junrui/cs162/book/">CS 162 - Programming Languages</a>
                   </div>
                 </div>
                 <div class="col-2-12">
