--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -151,9 +151,12 @@
               <ul>
                 <li>[In progress] <a
                     href="https://otl.ucsb.edu/graduate-students/ta-certificate-programs/ccut">Certificate in College
-                    and University Teaching (CCUT)</a></li>
+                    and University Teaching (CCUT), UCSB</a></li>
+                <li>[In progress] <a
+                    href="https://otl.ucsb.edu/graduate-students/ta-certificate-programs/lead-ta-institute">Lead TA
+                    Institute, UCSB</a></li>
                 <li><a href="https://otl.ucsb.edu/graduate-students/ta-certificate-programs/stia">Summer
-                    Teaching Institute for Associates (STIA)</a></li>
+                    Teaching Institute for Associates (STIA), UCSB</a></li>
               </ul>
 
               <h3>Instructor 🧑‍🏫</h3>
@@ -178,6 +181,23 @@
                   <div class="content">
                     <a href="https://github.com/fredfeng/CS292C/tree/spring-2024">CS 292C - Computer-Aided Reasoning for
                       Software</a> (co-taught with Yu Feng)
+                  </div>
+                </div>
+              </div>
+
+              <br>
+
+              <h3>Lead TA 🧑‍💼</h3>
+
+              <div class="grid grid-pad">
+                <div class="col-2-12">
+                  <div class="content">
+                    2025-2026
+                  </div>
+                </div>
+                <div class="col-10-12">
+                  <div class="content">
+                    Lead TA for UCSB Computer Science Department
                   </div>
                 </div>
               </div>
