--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -169,7 +169,7 @@
                 </div>
                 <div class="col-10-12">
                   <div class="content">
-                    <a href="https://sites.cs.ucsb.edu/~junrui/cs162/book/">CS 162 - Programming Languages</a>
+                    <a href="https://junrui-liu.github.io/cs162/">CS 162 - Programming Languages</a>
                   </div>
                 </div>
                 <div class="col-2-12">
