--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -164,6 +164,17 @@
               <div class="grid grid-pad">
                 <div class="col-2-12">
                   <div class="content">
+                    2025 Fall
+                  </div>
+                </div>
+                <div class="col-10-12">
+                  <div class="content">
+                    <a href="https://cs.ucsb.edu/building-better-tas#cs-501">CS 501 - Techniques of Computer Science
+                      Teaching</a>
+                  </div>
+                </div>
+                <div class="col-2-12">
+                  <div class="content">
                     2025 Summer
                   </div>
                 </div>
