--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -51,6 +51,9 @@
                 &nbsp;/&nbsp;
                 <!-- <a href="https://scholar.google.com/citations?user=GCYG4GoAAAAJ">Google Scholar</a> &nbsp;/&nbsp; -->
                 <a href="https://www.linkedin.com/in/junrui-liu/"> LinkedIn </a>
+                &nbsp;/&nbsp;
+                <a href="https://bsky.app/profile/junrui-liu.bsky.social"> Bluesky </a>
+
                 <!-- &nbsp;/&nbsp;
                 <a href="https://junrui-liu.github.io"> CV </a> -->
               </p>
