--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -34,8 +34,8 @@
               <h1>
                 Junrui Liu
               </h1>
-              <p>I am a fourth-year Computer Science PhD student at <a href="https://www.ucsb.edu/">UC Santa
-                  Barbara</a>, advised by Professor <a href="https://fredfeng.github.io/">Yu Feng</a>. I am interested
+              <p>I am a 5th-year Computer Science PhD student at <a href="https://www.ucsb.edu/">UC Santa
+                  Barbara</a>, advised by <a href="https://fredfeng.github.io/">Yu Feng</a>. I am interested
                 in all things related to programming languages, especially in verification and synthesis.
               </p>
               <p>
@@ -70,13 +70,8 @@
           <tr>
             <td style="padding:2%;padding-top:0%;padding-bottom:0%;width:100%;vertical-align:middle">
               <h2>Publications & Manuscripts</h2>
+              <p>("+" means equal contribution)</p>
             </td>
-          </tr>
-          <tr>
-            <td style="padding:2%;padding-top:0%;padding-bottom:0%;width:100%;vertical-align:middle">
-              <p>(+ means equal contribution)</p>
-            </td>
-          </tr>
         </table>
         <table
           style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;">
@@ -97,6 +92,7 @@
               {{post.authors}}
 
               <br>
+              <!-- <hr style="height:0px; visibility:hidden;" /> -->
               <em>{{post.venue}}</em>
               <!-- , {{ post.date | date: "%Y" }} -->
               <br>
@@ -141,11 +137,11 @@
 
               <h3>Awards 🏆</h3>
               <ul>
-                <li><em>Teaching Assistant of the Year</em>, UCSB Department of Computer Science (2025)</li>
-                <li><em>Outstanding Teaching Assistant in Computer Science</em>, UCSB College of Engineering (2024) <a
+                <li><b>Teaching Assistant of the Year</b>, UCSB Department of Computer Science, 2025</li>
+                <li><b>Outstanding Teaching Assistant</b>, UCSB College of Engineering, 2024 <a
                     href="https://engineering.ucsb.edu/news/class-2024-selects-teaching-assistants-year">[press]</a>
                 </li>
-                <li><em>Outstanding Teaching Assistant in Computer Science</em>, UCSB College of Engineering (2023) <a
+                <li><b>Outstanding Teaching Assistant</b>, UCSB College of Engineering, 2023 <a
                     href="https://engineering.ucsb.edu/news/class-2023-selects-teaching-assistants-year">[press]</a>
                 </li>
               </ul>
