--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -135,28 +135,8 @@
 
               <p>
 
-              <h3>Awards 🏆</h3>
-              <ul>
-                <li><b>Teaching Assistant of the Year</b>, UCSB Department of Computer Science, 2025</li>
-                <li><b>Outstanding Teaching Assistant</b>, UCSB College of Engineering, 2024 <a
-                    href="https://engineering.ucsb.edu/news/class-2024-selects-teaching-assistants-year">[press]</a>
-                </li>
-                <li><b>Outstanding Teaching Assistant</b>, UCSB College of Engineering, 2023 <a
-                    href="https://engineering.ucsb.edu/news/class-2023-selects-teaching-assistants-year">[press]</a>
-                </li>
-              </ul>
 
-              <h3>Certificates and Training ✅</h3>
-              <ul>
-                <li>[In progress] <a
-                    href="https://otl.ucsb.edu/graduate-students/ta-certificate-programs/ccut">Certificate in College
-                    and University Teaching (CCUT), UCSB</a></li>
-                <li>[In progress] <a
-                    href="https://otl.ucsb.edu/graduate-students/ta-certificate-programs/lead-ta-institute">Lead TA
-                    Institute, UCSB</a></li>
-                <li><a href="https://otl.ucsb.edu/graduate-students/ta-certificate-programs/stia">Summer
-                    Teaching Institute for Associates (STIA), UCSB</a></li>
-              </ul>
+
 
               <h3>Instructor 🧑‍🏫</h3>
 
@@ -195,10 +175,8 @@
                 </div>
               </div>
 
+
               <br>
-
-
-
 
               <h3>Teaching Assistant 🧑‍💻</h3>
 
@@ -309,6 +287,32 @@
                 </div>
 
               </div>
+
+
+              <br>
+
+              <h3>Awards 🏆</h3>
+              <ul>
+                <li><b>Teaching Assistant of the Year</b>, UCSB Department of Computer Science, 2025</li>
+                <li><b>Outstanding Teaching Assistant</b>, UCSB College of Engineering, 2024 <a
+                    href="https://engineering.ucsb.edu/news/class-2024-selects-teaching-assistants-year">[press]</a>
+                </li>
+                <li><b>Outstanding Teaching Assistant</b>, UCSB College of Engineering, 2023 <a
+                    href="https://engineering.ucsb.edu/news/class-2023-selects-teaching-assistants-year">[press]</a>
+                </li>
+              </ul>
+
+
+              <h3>Certificates and Training ✅</h3>
+              <ul>
+                <li><a href="https://otl.ucsb.edu/graduate-students/ta-certificate-programs/ccut">Certificate in College
+                    and University Teaching (CCUT), UCSB</a></li>
+                <li><a href="https://otl.ucsb.edu/graduate-students/ta-certificate-programs/lead-ta-institute">Lead TA
+                    Institute, UCSB</a></li>
+                <li><a href="https://otl.ucsb.edu/graduate-students/ta-certificate-programs/stia">Summer
+                    Teaching Institute for Associates (STIA), UCSB</a></li>
+              </ul>
+
 
               </p>
             </td>
