--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -306,11 +306,11 @@
               <h3>Certificates and Training ✅</h3>
               <ul>
                 <li><a href="https://otl.ucsb.edu/graduate-students/ta-certificate-programs/ccut">Certificate in College
-                    and University Teaching (CCUT), UCSB</a></li>
+                    and University Teaching, UCSB</a></li>
                 <li><a href="https://otl.ucsb.edu/graduate-students/ta-certificate-programs/lead-ta-institute">Lead TA
                     Institute, UCSB</a></li>
                 <li><a href="https://otl.ucsb.edu/graduate-students/ta-certificate-programs/stia">Summer
-                    Teaching Institute for Associates (STIA), UCSB</a></li>
+                    Teaching Institute for Associates, UCSB</a></li>
               </ul>
 
 
