--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -95,10 +95,10 @@
             languages</a> and <a href="https://en.wikipedia.org/wiki/Formal_methods">formal methods</a>. To achieve
           this, I work on:
         <ul>
-          <li>developing <em>program synthesizers</em> to
+          <li>developing <em>program synthesizers</em> that
             generate correct-by-construction software automatically</li>
           <li><em>formally verifying</em> that existing software
-            conforms to logical speficiation</li>
+            conforms to logical specifications</li>
           <li>designing <em>domain-specific languages</em> to make it easier to build reliable software for
             emerging domains.
           </li>
