--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -227,7 +227,7 @@
         <h2 id="teaching">Teaching</h2>
         <p style="text-align:center">
           [
-          <a href="/eval">Student Evaluations ❤️</a>
+          <a href="/eval">Student Evaluations 💛</a>
           &nbsp;/&nbsp;
           <a href="https://docs.google.com/document/d/164pGf9iYhpPtrfrIxvOjCZoSrbKWpKhiyCJWE9Z0t-c/edit?usp=sharing">Sample
             Lesson Plan 📋</a>
