--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -64,6 +64,10 @@
                 I received my undergraduate degree from Vassar College, and my M.S. from Yale University.
               </p>
 
+              <p>
+                <a href="/pdfs/junrui-liu-cv.pdf">Here is my CV.</a>
+              </p>
+
             </td>
             <td style="padding:4%;width:20%;max-width:30%">
               <img style="width:100%;max-width:100%" alt="profile photo" src="images/profile0.png">
@@ -226,14 +230,14 @@
 
         <h2 id="teaching">Teaching</h2>
         <p style="text-align:center">
-          [
-          <a href="/eval">Student Evaluations 💛</a>
-          &nbsp;/&nbsp;
+          /
           <a href="https://docs.google.com/document/d/164pGf9iYhpPtrfrIxvOjCZoSrbKWpKhiyCJWE9Z0t-c/edit?usp=sharing">Sample
             Lesson Plan 📋</a>
           &nbsp;/&nbsp;
+          <a href="/eval">Student Evaluations 💛</a>
+          &nbsp;/&nbsp;
           Teaching Philosophy 💭 (coming soon)
-          ]
+          /
         </p>
 
         <!-- <p><em>Note: You can click on the titles of most courses below to access the course materials. -->
