--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -55,17 +55,17 @@
 
               </p>
               <p>I am a 5th-year Computer Science PhD student at <a href="https://www.ucsb.edu/">UC Santa
-                  Barbara</a>, advised by <a href="https://fredfeng.github.io/">Yu Feng</a>.
-              </p>
-              <p>
-
-              </p>
-              <p>
-                I received my undergraduate degree from Vassar College, and my M.S. from Yale University.
+                  Barbara</a>, advised by <a href="https://fredfeng.github.io/">Yu Feng</a>. I received my undergraduate
+                degree from Vassar College, and my M.S. from Yale University.
               </p>
 
               <p>
-                <a href="/pdfs/junrui-liu-cv.pdf">Here is my CV.</a>
+                <em><b>News:</b> I'm on the market for tenure-track faculty positions at US liberal arts colleges!
+                  Check out my <a href="/pdfs/junrui-liu-cv.pdf">CV</a>, <a
+                    href="/pdfs/junrui-liu-teaching-statement.pdf">teaching statement</a>, and <a
+                    href="/pdfs/junrui-liu-research-statement.pdf">research
+                    statement</a>.
+                </em>
               </p>
 
             </td>
@@ -231,12 +231,12 @@
         <h2 id="teaching">Teaching</h2>
         <p style="text-align:center">
           /
-          <a href="https://docs.google.com/document/d/164pGf9iYhpPtrfrIxvOjCZoSrbKWpKhiyCJWE9Z0t-c/edit?usp=sharing">Sample
-            Lesson Plan 📋</a>
+          <a href="/pdfs/junrui-liu-teaching-statement.pdf">Teaching Philosophy 💭</a>
           &nbsp;/&nbsp;
           <a href="/eval">Student Evaluations 💛</a>
           &nbsp;/&nbsp;
-          Teaching Philosophy 💭 (coming soon)
+          <a href="https://docs.google.com/document/d/164pGf9iYhpPtrfrIxvOjCZoSrbKWpKhiyCJWE9Z0t-c/edit?usp=sharing">Sample
+            Lesson Plan 📋</a>
           /
         </p>
 
