--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -60,7 +60,8 @@
               </p>
 
               <p>
-                <em><b>News:</b> I'm on the market for tenure-track faculty positions at US liberal arts colleges!
+                <em><b>News:</b> I'm on the academic job market for tenure-track faculty positions at US liberal arts
+                  colleges!
                   Check out my <a href="/pdfs/junrui-liu-cv.pdf">CV</a>, <a
                     href="/pdfs/junrui-liu-teaching-statement.pdf">teaching statement</a>, and <a
                     href="/pdfs/junrui-liu-research-statement.pdf">research
