--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -227,10 +227,11 @@
 
 
         <br>
-        <br>
 
+        <p>
         <h2 id="teaching">Teaching</h2>
-        <p style="text-align:center">
+        </p>
+        <!-- <p style="text-align:center">
           /
           <a href="/pdfs/junrui-liu-teaching-statement.pdf">Teaching Philosophy 💭</a>
           &nbsp;/&nbsp;
@@ -239,7 +240,7 @@
           <a href="https://docs.google.com/document/d/164pGf9iYhpPtrfrIxvOjCZoSrbKWpKhiyCJWE9Z0t-c/edit?usp=sharing">Sample
             Lesson Plan 📋</a>
           /
-        </p>
+        </p> -->
 
         <!-- <p><em>Note: You can click on the titles of most courses below to access the course materials. -->
         <!-- </em> -->
