--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,6 +14,9 @@
   <meta name="author" content="{{ site.name }}" />
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
+  <style>
+    @import url('https://fonts.googleapis.com/css2?family=Literata:ital,opsz,wght@0,7..72,200..900;1,7..72,200..900&display=swap');
+  </style>
 
 
   <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/simplegrid.css" />
@@ -22,9 +25,6 @@
     type="text/css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link
-    href="https://fonts.googleapis.com/css2?family=Literata:ital,opsz,wght@0,7..72,200..900;1,7..72,200..900&display=swap"
-    rel="stylesheet">
 
   {% if page.layout == 'page' %}
   <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/page.css" />
