--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -2,7 +2,7 @@
 layout: default
 ---
 
-<article class="post">
+<article>
     <!-- back to homepage button -->
     <a href="{{ site.baseurl }}/#blog" class="home-button" aria-label="Back to homepage">
         <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
