--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -75,8 +75,29 @@
 
               </p>
               <p>I am a 5th-year Computer Science PhD student at <a href="https://www.ucsb.edu/">UC Santa
-                  Barbara</a>, advised by <a href="https://fredfeng.github.io/">Yu Feng</a>. I received my undergraduate
-                degree from Vassar College, and my M.S. from Yale University.
+                  Barbara</a>, where I do research at the
+                intersection of <b>programming languages</b>, <b>formal methods</b>, and <b>software
+                  engineering</b>. I am advised by <a href="https://fredfeng.github.io/">Yu Feng</a>. Prior to this, I
+                received my
+                undergraduate
+                degree from <a href="https://www.vassar.edu/computerscience">Vassar College</a>, and my M.S. from <a
+                  href="https://engineering.yale.edu/academic-study/departments/computer-science">Yale University</a>.
+              </p>
+              <!-- <p>
+                I'm interested in ...
+              </p> -->
+              <p>When not researching or teaching, I enjoy playing music, and am currently studying the <a
+                  href='https://www.gcna.org/about-carillons'>carillon</a> with <a
+                  href='https://music.ucsb.edu/people/faculty/wesley-arai'>Wesley Arai</a>. I occasionally post
+                my progress videos <a href="https://www.youtube.com/@roly4301">here</a>.
+                Previously, I studied organ with <a href='http://www.gailarcher.com/artist.html'>Gail Archer</a>.
+                <!-- Random stuff: Solver-Aided Chorale Composition (<a href="/pdfs/choco.pdf">poster</a>).</p> -->
+                I'm also mildly weeb, enjoying watching <a
+                  href="https://www.youtube.com/@sissonnelive/videos">owarai</a> and
+                <a href="/images/3x3.jpg">anime</a>,
+                listening to <a
+                  href="https://youtube.com/playlist?list=PLYpJvGKpl7tao5DG9RIaNpj9kyjv8irCV&si=j2ElqqSnmbupkc5Y">radio</a>,
+                and reading Murakami.
               </p>
 
               <p>
@@ -102,8 +123,6 @@
           <a href="#research">Research</a>
           &nbsp;§&nbsp;
           <a href="#teaching">Teaching</a>
-          &nbsp;§&nbsp;
-          <a href="#personal">Personal</a>
           &nbsp;§&nbsp;
           <a href="#blog">Blog</a>
           <!-- &nbsp;/&nbsp;
@@ -433,10 +452,11 @@
         <br>
 
 
-        <h2>Talks & Tutorials</h2>
+        <h2>Talks, Tutorials & Workshops</h2>
 
 
         <ul>
+          <li>Leading Computer-Based Lab Workshop (UCSB Teaching Assistant Orientation 2025)</li>
           <li>Polymorphism, Curry-Howard, and Program Verification (guest lecture for CS162 @ UCSB)</li>
           <li>Formal Verification for Zero-Knowledge Proofs (Applied ZK Workshop @ SBC'22)</li>
           <li>Introduction to Interactive Theorem Proving in Coq (0xPARC Summer Residency 2022)</li>
@@ -445,28 +465,6 @@
         </ul>
 
 
-        <br>
-
-
-
-        <h2 id="personal">Personal</h2>
-        <!-- <p>
-                I'm interested in ...
-              </p> -->
-        <p>I enjoy playing music, and am currently studying the <a
-            href='https://www.gcna.org/about-carillons'>carillon</a> with <a
-            href='https://music.ucsb.edu/people/faculty/wesley-arai'>Wesley Arai</a>. I occasionally post
-          my progress videos <a href="https://www.youtube.com/@roly4301">here</a>.
-          Previously, I studied organ with <a href='http://www.gailarcher.com/artist.html'>Gail Archer</a>.
-          Random stuff: Solver-Aided Chorale Composition (<a href="/pdfs/choco.pdf">poster</a>).</p>
-        <p>
-          I'm a moderate weeb and speak (not so jyozu) Japanese.
-          I enjoy watching <a href="https://www.youtube.com/@sissonnelive/videos">owarai</a> and
-          <a href="/images/3x3.jpg">anime</a>,
-          listening to <a
-            href="https://youtube.com/playlist?list=PLYpJvGKpl7tao5DG9RIaNpj9kyjv8irCV&si=j2ElqqSnmbupkc5Y">radio</a>,
-          and reading Murakami.
-        </p>
 
 
 
