--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -92,12 +92,10 @@
                 my progress videos <a href="https://www.youtube.com/@roly4301">here</a>.
                 Previously, I studied organ with <a href='http://www.gailarcher.com/artist.html'>Gail Archer</a>.
                 <!-- Random stuff: Solver-Aided Chorale Composition (<a href="/pdfs/choco.pdf">poster</a>).</p> -->
-                I'm also mildly weeb, enjoying watching <a
-                  href="https://www.youtube.com/@sissonnelive/videos">owarai</a> and
+                I'm also mildly weeb, enjoying <a href="https://www.youtube.com/@sissonnelive/videos">owarai</a>,
                 <a href="/images/3x3.jpg">anime</a>,
-                listening to <a
-                  href="https://youtube.com/playlist?list=PLYpJvGKpl7tao5DG9RIaNpj9kyjv8irCV&si=j2ElqqSnmbupkc5Y">radio</a>,
-                and reading Murakami.
+                and <a
+                  href="https://youtube.com/playlist?list=PLYpJvGKpl7tao5DG9RIaNpj9kyjv8irCV&si=j2ElqqSnmbupkc5Y">radio</a>.
               </p>
 
               <p>
@@ -284,7 +282,7 @@
           </div>
           <div class="col-10-12">
             <div class="content">
-              <a href="https://cs.ucsb.edu/building-better-tas#cs-501">CS 501 - Techniques of Computer Science
+              <a href="https://junrui-liu.github.io/cs501/">CS 501 - Techniques of Computer Science
                 Teaching</a>
             </div>
           </div>
