--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -83,21 +83,6 @@
                 degree from <a href="https://www.vassar.edu/computerscience">Vassar College</a>, and my M.S. from <a
                   href="https://engineering.yale.edu/academic-study/departments/computer-science">Yale University</a>.
               </p>
-              <!-- <p>
-                I'm interested in ...
-              </p> -->
-              <p>When not researching or teaching, I enjoy playing music, and am currently studying the <a
-                  href='https://www.gcna.org/about-carillons'>carillon</a> with <a
-                  href='https://music.ucsb.edu/people/faculty/wesley-arai'>Wesley Arai</a>. I occasionally post
-                my progress videos <a href="https://www.youtube.com/@roly4301">here</a>.
-                Previously, I studied organ with <a href='http://www.gailarcher.com/artist.html'>Gail Archer</a>.
-                <!-- Random stuff: Solver-Aided Chorale Composition (<a href="/pdfs/choco.pdf">poster</a>).</p> -->
-                I'm also mildly weeb, enjoying <a href="https://www.youtube.com/@sissonnelive/videos">owarai</a>,
-                <a href="/images/3x3.jpg">anime</a>,
-                and <a
-                  href="https://youtube.com/playlist?list=PLYpJvGKpl7tao5DG9RIaNpj9kyjv8irCV&si=j2ElqqSnmbupkc5Y">radio</a>.
-              </p>
-
               <p>
                 <em><b>News:</b> I'm on the academic job market for tenure-track faculty positions in Computer Science!
                   Check out my <a href="/pdfs/junrui-liu-cv.pdf">CV</a>, <a
@@ -121,6 +106,8 @@
           <a href="#research">Research</a>
           &nbsp;§&nbsp;
           <a href="#teaching">Teaching</a>
+          &nbsp;§&nbsp;
+          <a href="#personal">Personal</a>
           &nbsp;§&nbsp;
           <a href="#blog">Blog</a>
           <!-- &nbsp;/&nbsp;
@@ -462,6 +449,20 @@
           </li>
         </ul>
 
+        <br>
+
+
+        <h2 id="personal">Personal</h2>
+        <p> I enjoy playing music, and am currently studying the <a
+            href='https://www.gcna.org/about-carillons'>carillon</a> with <a
+            href='https://music.ucsb.edu/people/faculty/wesley-arai'>Wesley Arai</a>. I occasionally post
+          my progress videos <a href="https://www.youtube.com/@roly4301">here</a>.
+          Previously, I studied organ with <a href='http://www.gailarcher.com/artist.html'>Gail Archer</a>.
+          <!-- Random stuff: Solver-Aided Chorale Composition (<a href="/pdfs/choco.pdf">poster</a>).</p> -->
+          I'm also mildly weeb, enjoying <a href="https://www.youtube.com/@sissonnelive/videos">owarai</a>,
+          <a href="https://youtube.com/playlist?list=PLYpJvGKpl7tao5DG9RIaNpj9kyjv8irCV&si=j2ElqqSnmbupkc5Y">radio</a>,
+          and <a href="/images/3x3.jpg">anime</a>.
+        </p>
 
 
 
