--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -458,10 +458,12 @@
             href='https://music.ucsb.edu/people/faculty/wesley-arai'>Wesley Arai</a>. I occasionally post
           my progress videos <a href="https://www.youtube.com/@roly4301">here</a>.
           Previously, I studied organ with <a href='http://www.gailarcher.com/artist.html'>Gail Archer</a>.
-          <!-- Random stuff: Solver-Aided Chorale Composition (<a href="/pdfs/choco.pdf">poster</a>).</p> -->
-          I'm also mildly weeb, enjoying <a href="https://www.youtube.com/@sissonnelive/videos">owarai</a>,
-          <a href="https://youtube.com/playlist?list=PLYpJvGKpl7tao5DG9RIaNpj9kyjv8irCV&si=j2ElqqSnmbupkc5Y">radio</a>,
-          and <a href="/images/3x3.jpg">anime</a>.
+          Random stuff: Solver-Aided Chorale Composition (<a href="/pdfs/choco.pdf">poster</a>, <a
+            href="https://github.com/junrui-liu/choco">code</a>).</p>
+
+        I'm also mildly weeb, enjoying <a href="https://www.youtube.com/@sissonnelive/videos">owarai</a>,
+        <a href="https://youtube.com/playlist?list=PLYpJvGKpl7tao5DG9RIaNpj9kyjv8irCV&si=j2ElqqSnmbupkc5Y">radio</a>,
+        and <a href="/images/3x3.jpg">anime</a>.
         </p>
 
 
