--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -23,6 +23,26 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 
+  <!-- Font Awesome for social icons -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
+
+  <style>
+    .social-links a {
+      color: inherit;
+      text-decoration: none;
+    }
+
+    .social-links i {
+      margin-right: 6px;
+    }
+
+    .social-links .sep {
+      margin: 0 6px;
+      color: #666;
+    }
+  </style>
+
 
 
   {% if page.style %}
@@ -62,17 +82,22 @@
                 Junrui Liu
               </h1>
               <p style="text-align:center">
-
-                <a target="_blank" href="https://mailhide.io/en/e/qzWe0mau">Email</a>
-                &nbsp;/&nbsp;
-                <a href="https://scholar.google.com/citations?user=DWWFQkkAAAAJ">Google Scholar</a>
-                &nbsp;/&nbsp;
-                <a href="https://github.com/junrui-liu">GitHub</a>
-                &nbsp;/&nbsp;
-                <a href="https://bsky.app/profile/junrui-liu.bsky.social">Bluesky</a>
-                <!-- &nbsp;/&nbsp;
-                <a href="https://junrui-liu.github.io"> CV </a> -->
-
+                <span class="social-links">
+                  <a target="_blank" rel="noopener noreferrer" href="https://mailhide.io/en/e/qzWe0mau"><i
+                      class="fas fa-envelope"></i>Email</a>
+                  &nbsp;/&nbsp;
+                  <a target="_blank" rel="noopener noreferrer"
+                    href="https://scholar.google.com/citations?user=DWWFQkkAAAAJ"><i
+                      class="fa-brands fa-google-scholar"></i>Google Scholar</a>
+                  &nbsp;/&nbsp;
+                  <a target="_blank" rel="noopener noreferrer" href="https://github.com/junrui-liu"><i
+                      class="fab fa-github"></i>GitHub</a>
+                  &nbsp;/&nbsp;
+                  <a target="_blank" rel="noopener noreferrer" href="https://bsky.app/profile/junrui-liu.bsky.social"><i
+                      class="fa-brands fa-bluesky"></i>Bluesky</a>
+                  <!-- &nbsp;/&nbsp;
+                  <a href="https://junrui-liu.github.io"> CV </a> -->
+                </span>
               </p>
               <p>I am a 5th-year Computer Science PhD student at <a href="https://www.ucsb.edu/">UC Santa
                   Barbara</a>, where I do research at the
@@ -462,7 +487,7 @@
             href="https://github.com/junrui-liu/choco">code</a>).</p>
 
         I'm also mildly weeb, enjoying <a href="https://www.youtube.com/@sissonnelive/videos">owarai</a>,
-        <a href="https://youtube.com/playlist?list=PLYpJvGKpl7tao5DG9RIaNpj9kyjv8irCV&si=j2ElqqSnmbupkc5Y">radio</a>,
+        <a href="https://youtube.com/playlist?list=PLYpJvGKpl7tao5DG9RIaNpj9kyjv8irCV&si=j2ElqqSnmbupkc5Y">podcasts</a>,
         and <a href="/images/3x3.jpg">anime</a>.
         </p>
 
