--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -93,8 +93,9 @@
                   <a target="_blank" rel="noopener noreferrer" href="https://github.com/junrui-liu"><i
                       class="fab fa-github"></i>GitHub</a>
                   &nbsp;/&nbsp;
+                  <!-- make the following icon smaller -->
                   <a target="_blank" rel="noopener noreferrer" href="https://bsky.app/profile/junrui-liu.bsky.social"><i
-                      class="fa-brands fa-bluesky"></i>Bluesky</a>
+                      class="fa-brands fa-bluesky" style="font-size: 0.8em;"></i>Bluesky</a>
                   <!-- &nbsp;/&nbsp;
                   <a href="https://junrui-liu.github.io"> CV </a> -->
                 </span>
