--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -135,7 +135,7 @@
           &nbsp;§&nbsp;
           <a href="#personal">Personal</a>
           &nbsp;§&nbsp;
-          <a href="#blog">Blog</a>
+          <a target="_blank" rel="noopener noreferrer" href="https://non-well-founded.bearblog.dev/">Blog</a>
           <!-- &nbsp;/&nbsp;
                 <a href="https://junrui-liu.github.io"> CV </a> -->
         </p>
@@ -497,7 +497,7 @@
 
         <br>
 
-        <h2 id="blog">Blog</h2>
+        <!-- <h2 id="blog">Blog</h2>
         <div class="grid grid-pad">
           {% for post in site.posts %}
           {% for cat in post.categories %}
@@ -515,7 +515,7 @@
           {% endif %}
           {% endfor %}
           {% endfor %}
-        </div>
+        </div> -->
 
         <br>
 
